<resources>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="data_load_fail_please_check_network_settings">网络不给力，请检查您的网络设置</string>
    <string name="data_load_fail_exception">数据链接失败</string>
    <string name="server_busy">服务器繁忙，请您稍后再试</string>
    <string name="can_not_conntect_network_please_check_network_settings">网络不给力，请检查您的网络设置</string>
    <string name="empty">暂无相关商品</string>
    <string name="no_more">暂无更多商品</string>
    <string name="no_more_return">暂无退换货信息</string>
    <string name="no_more_money">暂无更多退款信息</string>
    <string name="order_empty">暂无相关商品</string>
    <string name="no_more_order">暂无更多订单</string>
    <string name="loading">载入中...</string>
    <string name="load_more">加载更多...</string>
    <string name="load_is_last">已经是最后一条</string>
    <string name="submit">提交</string>
    <string name="prompt">提示</string>
    <string name="filter">筛选</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="finish">完成</string>
    <string name="exchange">兑换</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="init_err">网络不给力</string>
    <string name="check_network_setting">请检查您的网络设置</string>
    <string name="setting_network">设置网络</string>
    <string name="non_data">当前无数据</string>
    <string name="non_order">您没有订单记录</string>
    <string name="zero">00</string>
    <string name="pack_up">收起</string>
    <string name="yuan">元</string>
    <string name="yuan_sign">￥</string>
    <string name="version">版本: </string>
    <string name="day">天</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="isopenloaction">是否开启您的定位？</string>
    <string name="free_freight">免运费</string>
    <string name="now_not_have_price">暂无价格</string>
    <string name="total">共</string>
    <string name="nationwide">全国</string>
    <string name="versonupdate">版本更新</string>
    <string name="newversondown">新版本下载</string>
    <string name="nowdownnewverson">正在下载新版本请稍后...</string>
    <string name="continuestr">继续</string>
    <string name="canceldown">是否要取消下载？</string>
    <string name="uninstall_warningTitle">提示</string>
    <string name="uninstall_warningContent">是否要将国美旧版本的客户端删除？</string>
    <string name="no_sdcard">没有存储卡或存储卡空间不足，无法更新版本</string>
    <string name="update_verson">检测到可更新的版本: </string>
    <string name="versonupdate_title">最新版本</string>
    <string name="versonupdate_now">立即更新</string>
    <string name="versonupdate_now_no">暂不更新</string>
    <string name="verson_loading">检测中，请稍后...</string>
    <string name="verson_new_now">您目前已经是最新版本</string>
    <string name="is_or_no_before_tel">送货前是否电话通知：</string>
    <string name="index_page">首页</string>
    <string name="my_gome">我的国美</string>
    <string name="hot_promition">热门促销</string>
    <string name="brand_area">品牌专区</string>
    <string name="favourable_groupbuy">优惠团购</string>
    <string name="limit_buy">限时抢购</string>
    <string name="combine_buy">组合套购</string>
    <string name="rank_board">排行榜</string>
    <string name="barcode_buy">条码购</string>
    <string name="gome_comm">国美社区</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_appraise">我的评价</string>
    <string name="product_history">浏览历史</string>
    <string name="gome_announce">商城公告</string>
    <string name="hello">Hello World, GomeEMallActivity!</string>
    <string name="app_name">国美在线</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="refresh_finish">刷新完成</string>
    <string name="tap_to_refresh">点击刷新推荐列表</string>
    <string name="search">搜索</string>
    <string name="all">全部</string>
    <string name="choice_search_category">选择搜索分类</string>
    <string name="no_result_category">暂无分类数据</string>
    <string name="near_search">最近的搜索: </string>
    <string name="intell_prom">智能提示: </string>
    <string name="total_promsearch_count">条记录</string>
    <string name="more">更多</string>
    <string name="settings">设置</string>
    <string name="settings_about">设置/关于</string>
    <string name="gome_stores">国美门店</string>
    <string name="browser_history">浏览历史</string>
    <string name="announcement">商城公告</string>
    <string name="announcement_detail">公告详情</string>
    <string name="help">帮助</string>
    <string name="rate">打分</string>
    <string name="gome_store">国美门店</string>
    <string name="check_update">检查更新: </string>
    <string name="current_version">当前版本</string>
    <string name="server_hotline">客服电话: </string>
    <string name="clear_cache">清除缓存</string>
    <string name="no_image_version">无图版本</string>
    <string name="start_location">开启定位</string>
    <string name="start_notification">开启通知</string>
    <string name="are_you_sure_clear_cache">确定清除缓存吗？</string>
    <string name="login_out">退出登录</string>
    <string name="login_out_cancel">注销</string>
    <string name="login_out_ok">退出登录成功</string>
    <string name="login_out_err">退出登录失败</string>
    <string name="use_help">使用帮助</string>
    <string name="use_course">应用教程</string>
    <string name="about">关于</string>
    <string name="store_self_help">自提帮助</string>
    <string name="store_self_process">自提流程</string>
    <string name="store_self_matter">注意事项</string>
    <string name="store_self_explain">特殊说明</string>
    <string name="store_self_friend">友好提示</string>
    <string name="version_desc">For Android v</string>
    <string name="copyright_desc">Copyright © 2000-2013 \n All Rights Resvered </string>
    <string name="author_desc">国美在线电子商务有限公司版权所有</string>
    <string name="delivery_progress">配送流程</string>
    <string name="security_payment">安全支付</string>
    <string name="sale_server">售后服务</string>
    <string name="server_number">4008-199-777</string>
    <string name="call_server_hotline">拨打客服电话</string>
    <string name="call">拨打</string>
    <string name="are_you_sure_call_server_number">确定拨打客服电话?</string>
    <string name="time">时间: </string>
    <string name="browse_history">浏览历史</string>
    <string name="you_have_no_product_browse_history">您目前没有浏览历史</string>
    <string name="remove_all_browse_history">清空浏览历史</string>
    <string name="browse_history_has_remvoe">浏览历史已清空</string>
    <string name="get_user_info_err">获取用户信息失败!</string>
    <string name="is_use_you_now_loaction">是否允许使用您当前的位置？</string>
    <string name="is_use_you_now_yes">好</string>
    <string name="is_use_you_now_no">不允许</string>
    <string name="more_hot_city">热门城市</string>
    <string name="more_select_city_by_province">按省份选择城市</string>
    <string name="more_gomestore_citylist">城市列表</string>
    <string name="more_gomestore_nearstore">附近门店</string>
    <string name="more_gomestore_storelist">门店列表</string>
    <string name="more_gomestore_map">地图模式</string>
    <string name="more_gomestore_list">列表模式</string>
    <string name="more_gomestore_now_city">当前定位城市: </string>
    <string name="more_gomestore_now_city_store">定位城市</string>
    <string name="more_gomestore_select_city">自选城市</string>
    <string name="more_gomestore_store">门店</string>
    <string name="more_gomestore_xgstore">相关城市</string>
    <string name="more_gomestore_search_hit">输入城市名或首字母查询</string>
    <string name="more_gomestore_loading_wall">正在加载线路请稍后...</string>
    <string name="more_gomestore_show_wall">显示路线</string>
    <string name="more_gomestore_feedback">意见反馈</string>
    <string name="more_gomestore_feedback_your_feed">您的建议</string>
    <string name="more_gomestore_feedback_your_feed_hint">请输入您的意见和建议，以帮助我们更好的改进产品。（5-200个字）</string>
    <string name="more_gomestore_feedback_your_email">您的邮箱</string>
    <string name="more_gomestore_feedback_your_email_check">(选填)</string>
    <string name="more_gomestore_feedback_your_email_hint">请留下您的邮箱，便于我们尽快回复</string>
    <string name="more_gomestore_feedback_your_feed_null">提交内容不能为空</string>
    <string name="more_gomestore_feedback_your_feed_error_formt">请输入5-200个字</string>
    <string name="more_gomestore_feedback_your_email_error_formt">邮箱格式不正确，请重新输入</string>
    <string name="more_gomestore_feedback_submit_success">感谢您的宝贵意见，我们会尽更加努力！</string>
    <string name="more_gomestore_feedback_submit_fail">提交失败！</string>
    <string name="more_gomestore_feedback_submit_neterror_plaease_retry">网络异常，请重新提交</string>
    <string name="category">分类</string>
    <string name="home_equipment">家用电器</string>
    <string name="digital_device">数码产品</string>
    <string name="life_equipment">生活电器</string>
    <string name="outdoor">家居/户外</string>
    <string name="kitchen">厨房/卫浴</string>
    <string name="toy_present">玩具礼品</string>
    <string name="mobile_communication">移动通讯</string>
    <string name="cars">汽车用品</string>
    <string name="computer_office">电脑办公</string>
    <string name="book_audiovisual">图书/音像</string>
    <string name="product_appraise">商品评价</string>
    <string name="product_return">返修/退换货</string>
    <string name="product_return_money">退款记录</string>
    <string name="product_question">购买咨询</string>
    <string name="publish_question">发表咨询</string>
    <string name="question_type">咨询类型: </string>
    <string name="question_content">咨询内容: </string>
    <string name="goods_question">商品咨询</string>
    <string name="inventory_delivery">库存配送</string>
    <string name="payment_question">支付问题</string>
    <string name="invoice_repair">发票及保修</string>
    <string name="please_enter_content_here_to_ask">在这里输入您要咨询的问题（10-200个字）</string>
    <string name="product_photo">商品图片</string>
    <string name="already_reply">已回复</string>
    <string name="waitfor_reply">待回复</string>
    <string name="product_hot">热度</string>
    <string name="product_sale">销量</string>
    <string name="product_price">价格</string>
    <string name="product_time">时间</string>
    <string name="shopping_goods_pay_method_null">支付方式</string>
    <string name="shopping_goods_order_success_payment_zhifubao">支付宝</string>
    <string name="shopping_goods_order_success_gopayment">去支付</string>
    <string name="shopping_cart_order_prompt_keep_24_hours">我们为您保留订单24小时，超时订单将自动取消！</string>
    <string name="groupbuy_all_region">全部地区</string>
    <string name="groupbuy_all_cagy">商品分类</string>
    <string name="groupbuy_default_soft">默认排序</string>
    <string name="mygome_my_order">我的订单</string>
    <string name="hot_sell">热销榜</string>
    <string name="lower_price">降价榜</string>
    <string name="hot_spot">热点榜</string>
    <string name="phone_recharge_order_num">订单编号:\u2000</string>
    <string name="phone_recharge_order_productName">商品名称:\u2000</string>
    <string name="phone_recharge_help_1">1.如何查询话费是否已经到账？</string>
    <string name="phone_recharge_help_11">答：您付款成功后，话费会在1至30分钟内充到您的手机中。您可以拨打运营商提供的免费客服电话查询余额以确认话费到账情况。
移动请拨打10086，联通拨打10010，电信请拨打10000。</string>
    <string name="phone_recharge_help_2">2.充值很长时间过去了，话费还没有到账是怎么回事？</string>
    <string name="phone_recharge_help_22">答：月末、月初充值高峰时段，用户较多，到账时间会有一定的延迟；如果长时间未到账，请提供手机查询密码与客服联系查询。</string>
    <string name="phone_recharge_help_3">3.充值时手机号码输入错误怎么办？</string>
    <string name="phone_recharge_help_33">答：如果您不小心充错了手机号码，款是不能退回来的，所以请您在填写手机号码的时候务必确认填写正确。</string>
    <string name="phone_recharge_help_4">4.手机充值是否需要手续费？</string>
    <string name="phone_recharge_help_44">答：不但不需要手续费，还可以享受最低至9.65折的优惠。</string>
    <string name="phone_recharge_must_pay_money">应付金额：</string>
    <string name="phone_recharge_pay_success">支付已成功，您的充值订单正在处理中，请稍后查询。</string>
    <string name="phone_recharge_order_nums">订单号：</string>
    <string name="phone_recharge_already_pay">已付金额：</string>
    <string name="phone_recharge_pay_type">支付方式：</string>
    <string name="phone_recharge_1_10_to_get">自动充值，1-10分钟到账。</string>
    <string name="phone_recharge_continue">继续充值</string>
    <string name="phone_recharge_common_question">常见问题</string>
    <string name="phone_recharge_already_submit_please_pay">您的订单已提交成功，请完成支付。</string>
    <string name="phone_recharge_pay_type_yinlian_ufu">U付（银联）</string>
</resources>