<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/common_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/more_item_single_normal"
        android:orientation="vertical" >

        <TextView
            style="@style/phone_recharge_text_red_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/common_orange_textcolor"
            android:text="@string/phone_recharge_already_submit_please_pay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/phone_recharge_text_grey_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_recharge_order_nums" />

            <TextView
                android:id="@+id/tv_phone_recharge_order_submit_success_ordernum"
                style="@style/phone_recharge_text_black_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/phone_recharge_order_product_name_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/phone_recharge_text_grey_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_recharge_order_productName" />

            <TextView
                android:id="@+id/phone_recharge_order_product_name"
                style="@style/phone_recharge_text_black_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/phone_recharge_text_grey_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_recharge_must_pay_money" />

            <TextView
                android:id="@+id/tv_phone_recharge_order_submit_success_pay_money"
                style="@style/phone_recharge_text_red_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/shopping_cart_order_prompt_keep_24_hours"
        android:textColor="@color/hint_text_color"
        android:textSize="13sp" />

    <TextView
        style="@style/phone_recharge_text_black_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/shopping_goods_pay_method_null" />

    <RadioGroup
        android:id="@+id/rg_phone_recharge_order_submit_success_pay_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rb_phone_recharge_order_submit_success_online_zhifubao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_item_first_normal"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/radio_button_bg_selector"
            android:drawablePadding="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/shopping_goods_order_success_payment_zhifubao"
            android:textColor="@color/main_default_black_text_color"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/rb_phone_recharge_order_submit_success_online_yinlian"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_item_last_normal"
            android:button="@null"
            android:drawableLeft="@drawable/radio_button_bg_selector"
            android:drawablePadding="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/phone_recharge_pay_type_yinlian_ufu"
            android:textColor="@color/main_default_black_text_color"
            android:textSize="15sp" />
    </RadioGroup>

    <Button
        android:id="@+id/bt_phone_recharge_order_submit_success_go_pay"
        style="@style/phone_recharge_btn_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/common_orange_btn"
        android:text="@string/shopping_goods_order_success_gopayment" />

</LinearLayout>