<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/common_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/more_item_single_normal"
        android:orientation="vertical" >

        <TextView
            style="@style/phone_recharge_text_red_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/common_orange_textcolor"
            android:text="@string/phone_recharge_pay_success" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/phone_recharge_text_black_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_recharge_order_num" />

            <TextView
                android:id="@+id/tv_phone_recharge_order_pay_success_ordernum"
                style="@style/phone_recharge_text_black_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/phone_recharge_text_black_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_recharge_already_pay" />

            <TextView
                android:id="@+id/tv_phone_recharge_order_pay_success_already_pay_money"
                style="@style/phone_recharge_text_red_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/phone_recharge_text_black_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_recharge_pay_type" />

            <TextView
                android:id="@+id/tv_phone_recharge_order_pay_success_pay_type"
                style="@style/phone_recharge_text_black_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/phone_recharge_text_grey_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="20dp"
        android:text="@string/phone_recharge_1_10_to_get" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/bt_phone_recharge_order_pay_success_continue_recharge"
            style="@style/phone_recharge_money_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/phone_recharge_selector"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/phone_recharge_continue" />

        <Button
            android:id="@+id/bt_phone_recharge_order_pay_success_myorder"
            style="@style/phone_recharge_money_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/phone_recharge_money_selector"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/mygome_my_order" />

        <Button
            android:id="@+id/bt_phone_recharge_order_pay_often_question"
            style="@style/phone_recharge_money_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/phone_recharge_money_selector"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/phone_recharge_common_question" />
    </LinearLayout>

</LinearLayout>