<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_bg"
    android:orientation="vertical" >

    <include
        android:id="@id/common_top_layout"
        layout="@layout/common_title_layout" />

    <LinearLayout
        android:id="@+id/more_feedback_main_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="10dp"
            android:text="@string/more_gomestore_feedback_your_feed"
            android:textColor="@color/weak_text_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/more_feedback_et_feed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/more_item_single_normal"
            android:gravity="left|top"
            android:hint="@string/more_gomestore_feedback_your_feed_hint"
            android:lines="10"
            android:paddingTop="10dp"
            android:textColor="@color/main_default_black_text_color"
            android:textColorHint="@color/hint_text_color"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_gomestore_feedback_your_email"
                android:textColor="@color/weak_text_color"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_gomestore_feedback_your_email_check" />
        </LinearLayout>

        <EditText
            android:id="@+id/more_feedback_et_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/more_item_single_normal"
            android:hint="@string/more_gomestore_feedback_your_email_hint"
            android:textColor="@color/main_default_black_text_color"
            android:textColorHint="@color/hint_text_color"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>